[package]
name = "lycan"
version = "0.1.0"
authors = ["Julien de Carufel <julien.decarufel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#client
sfml = "0.15.1"
reqwest = { version = "0.10", features = ["json", "blocking"] }
csv = "1.1"
#server
uuid = { version = "0.8.1", features = ["v4"] }
futures = "0.1"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5.4"
futures-util = "0.3.4"
lazy_static = "1.3"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.107", features = ["derive"] }
serde_json = "1.0.52"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
